# ai_news_aggregator

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  README.md  detailed_build_guide.md  docker-compose.yml  implementation_plan.md  pyproject.toml  requirements.txt  run.py  start.sh  web.py
app/: .env  config.py  scheduler.py
app/api/: index.html  main.py
app/models/: __init__.py  article.py  base.py  user.py
app/scrapers/: __init__.py  hackernews_scraper.py  openai_scraper.py  reddit_scraper.py  rss_feed_scraper.py  youtube.py
app/services/: __init__.py  article_service.py  pipeline.py  search_service.py  summarizer.py  transcript.py
scripts/: migrate_search.py
templates/: index.html
